option java_package = "fr.kissy.hellion.proto.common";
option java_outer_classname = "ObjectDto";
option java_generic_services = false;

import "Proto/Common/System.proto";
import "Proto/Common/Property.proto";

message ObjectProto {
    message SystemObjectProto {
        required SystemProto.Type systemType = 10;
        repeated PropertyProto properties = 11;
        optional string type = 12;
    }
    required string name = 1;
    repeated SystemObjectProto systemObjects = 2;
}