option java_package = "fr.kissy.hellion.proto";
option java_outer_classname = "Definition";
option java_generic_services = false;

import "Proto/Common.proto";

message Application {
    required string startupScene = 1;
    repeated Property properties = 2;
    repeated System systems = 3;
    repeated string scenes = 4;
}
message Scene {
    required string name = 1;
    repeated System systems = 2;
    repeated Object objects = 3;
    repeated Link links = 4;
}
message Link {
    required string subject = 1;
    required string observer = 2;
    required SystemType subjectSystemType = 3;
    required SystemType observerSystemType = 4;
}