option java_package = "fr.kissy.hellion.proto.definition";
option java_outer_classname = "SceneDefinitionDto";
option java_generic_services = false;

import "Proto/Common/System.proto";
import "Proto/Common/Object.proto";
import "Proto/Common/Property.proto";

message SceneDefinitionProto {
    message LinkProto {
        required string subject = 30;
        required string observer = 31;
        required SystemProto.Type subjectSystemType = 32;
        required SystemProto.Type observerSystemType = 33;
    }

    required string name = 1;
    repeated SystemProto systems = 2;
    repeated ObjectProto objects = 3;
    repeated LinkProto links = 4;
}